tests/snapshots/generate_plan_tests__pnpm_custom_version.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "ghcr.io/railwayapp/nixpacks:debian-1657820962",
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "pnpm i --frozen-lockfile"
      ],
      "cacheDirectories": [
        "/root/.cache/pnpm"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "nodejs-14_x"
        },
        {
          "name": "pnpm-6_x",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "pnpm run build"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "pnpm run start"
  }
}
